--- a/sample-docs/test.adoc
+++ b/sample-docs/test.adoc
@@ -9,6 +9,13 @@ Content entered directly below the header but before the first section heading i
 
 Writing an AsciiDoctor extension using Java is easy! Ask twitter:mrhaki[] about it.
 
+
+
+
+asdasdsad
+
+<<thelink>>
+
 This is a user manual for an empty project.
 
 
@@ -147,6 +154,9 @@ ____
 I am a verse block.
   Indents and endlines are preserved in verse blocks.
 ____
+
+
+asdas xx [[thelink]] yy asdsad asdsadsa
 
 == First level heading
 
