--- a/README
+++ b/README
@@ -20,5 +20,12 @@ docker run --rm -it c03e8866b949 /bin/bash
 * The action included in the respository automatically pushes the image on Dockerhub: hectorcadavid/asciidoctor-icd-ext:
 
 docker run --rm -it --mount type=bind,source=/tmp/adoc,target=/adocsrc --mount type=bind,source=/tmp/htmlr,target=/adocout hectorcadavid/asciidoctor-icd-ext
+
+* Run locally (not relying on CI/CD or centralized data)
+
 sh local_build_doc.sh /home/hcadavid/RUG-local/icd-pipeline-projects/DaC-asciidoctor-extensions-baseline/sample-docs-errors/rdl-conversion-errors /tmp/out2 http://localhost:8080 user:213 tdoctwo 333332
+
+
+* Run within an CI/CD, using centralized data
+
 sh gitlab_build_doc_test_env.sh /home/hcadavid/RUG-local/icd-pipeline-projects/DaC-asciidoctor-extensions-baseline/sample-docs /tmp/out http://localhost:8080/ user:123
